syntax = "proto3";

package api;
option go_package = "./;grpc";

service StreamService {
  rpc ListGather(GatherRequest) returns (stream GatherResponse) {}
}

message GatherRequest {
  int64 n = 1;
  int64 m = 2;
}

message GatherResponse {
  repeated string result = 1;
}
